feat: link tasks to users and unify UUIDs
